--- a/index.ipynb
+++ b/index.ipynb
@@ -210,14 +210,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-16-3ed35480581f>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-3ed35480581f>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    names_and_ranks.append((f'{i + 1}'.{city_names[i]})\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = []\n",
     "\n",
     "for i in city_indices:\n",
-    "    names_and_ranks.append((f'{i + 1}'.{city_names[i])\n",
+    "    names_and_ranks.append((f'{i + 1}'.{city_names[i]})\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
