--- a/index.ipynb
+++ b/index.ipynb
@@ -210,15 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-18-9756c1ed973d>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-20-bd45c610411d>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-9756c1ed973d>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    names_and_ranks.append(f'{i + 1}'.{city_names[i]})\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-bd45c610411d>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(f'{i + 1}'.{city_names[i]})\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
     "names_and_ranks = []\n",
     "\n",
     "for i in city_indices:\n",
-    "    names_and_ranks.append(f'{i + 1}'.{city_names[i]})\n",
+    "    print(f'{i + 1}'.{city_names[i]})\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
