--- a/index.ipynb
+++ b/index.ipynb
@@ -210,15 +210,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-bd45c610411d>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-bd45c610411d>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(f'{i + 1}'.{city_names[i]})\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.Buenos Aires\n",
+      "2.Toronto\n",
+      "3.Pyeongchang\n",
+      "4.Marakesh\n",
+      "5.Albuquerque\n",
+      "6.Los Cabos\n",
+      "7.Greenville\n",
+      "8.Archipelago Sea\n",
+      "9.Walla Walla Valley\n",
+      "10.Salina Island\n",
+      "11.Solta\n",
+      "12.Iguazu Falls\n"
      ]
     }
    ],
@@ -226,7 +236,7 @@
     "names_and_ranks = []\n",
     "\n",
     "for i in city_indices:\n",
-    "    print(f'{i + 1}'.{city_names[i]})\n",
+    "    print(f'{i + 1}.{city_names[i]}')\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
