--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
     "names_and_ranks = []\n",
     "\n",
     "for i in city_indices:\n",
-    "    print(f'{i + 1}.{city_names[i]}')\n",
+    "    names_and_rans(f'{i + 1}.{city_names[i]}')\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
