--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
     "\n",
     "for i in city_indices:\n",
     "    names_and_ranks.append(f'{i + 1}.{city_names[i]}')\n",
-    "    \n",
+    "print names_and_\n",
     "    \n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
