Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,15 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)? (<ipython-input-29-0fcaaf295e50>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-0fcaaf295e50>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print names_and_ranks\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)?\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = []\n",
     "\n",
     "for i in city_indices:\n",
     "    names_and_ranks.append(f'{i + 1}.{city_names[i]}')\n",
-    "print names_and_\n",
+    "print names_and_ranks\n",
     "    \n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
