--- a/index.ipynb
+++ b/index.ipynb
@@ -210,15 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)? (<ipython-input-29-0fcaaf295e50>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-0fcaaf295e50>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print names_and_ranks\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(names_and_ranks)?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1.Buenos Aires', '2.Toronto', '3.Pyeongchang', '4.Marakesh', '5.Albuquerque', '6.Los Cabos', '7.Greenville', '8.Archipelago Sea', '9.Walla Walla Valley', '10.Salina Island', '11.Solta', '12.Iguazu Falls']\n"
      ]
     }
    ],
@@ -227,7 +226,7 @@
     "\n",
     "for i in city_indices:\n",
     "    names_and_ranks.append(f'{i + 1}.{city_names[i]}')\n",
-    "print names_and_ranks\n",
+    "print(names_and_ranks)\n",
     "    \n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
