--- a/index.ipynb
+++ b/index.ipynb
@@ -234,22 +234,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.Buenos Aires'"
+       "'12.Iguazu Falls'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names_and_ranks[0] # '1. Buenos Aires'\n",
+    "names_and_ranks[0]\n",
+    "names_and_ranks[1] # '2. Toronto'\n",
+    "names_and_ranks[-1]# '1. Buenos Aires'\n",
     " # '12. Iguazu Falls'"
    ]
   },
