Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,8 @@
    "source": [
     "city_populations = []\n",
     "\n",
-    "for city"
+    "for city in cities:\n",
+    "    city_populations."
    ]
   },
   {
