--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
     "city_populations = []\n",
     "\n",
     "for city in cities:\n",
-    "    city_populations."
+    "    city_populations.append()"
    ]
   },
   {
