Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,7 @@
    "source": [
     "city_populations = []\n",
     "\n",
-    "for city in city_names:\n",
+    "for c in ci\n",
     "    print(cities[city]['Population'])"
    ]
   },
