Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
     "city_populations = []\n",
     "\n",
     "for c in cities:\n",
-    "    print(cities[city]['Population'])"
+    "    print(cities['Population'])"
    ]
   },
   {
