--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,7 @@
    "source": [
     "city_populations = []\n",
     "\n",
-    "for c in cities:\n",
+    "for i in cities:\n",
     "    print(cities[c]['Population'])"
    ]
   },
