--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "city_populations = []\n",
     "\n",
     "for i in city_indices:\n",
-    "    print(cities[i]['Population'])"
+    "    city_populati(cities[i]['Population'])"
    ]
   },
   {
