--- a/index.ipynb
+++ b/index.ipynb
@@ -264,33 +264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2891000\n",
-      "2800000\n",
-      "2581000\n",
-      "928850\n",
-      "559277\n",
-      "287651\n",
-      "84554\n",
-      "60000\n",
-      "32237\n",
-      "4000\n",
-      "1700\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_populations = []\n",
     "\n",
     "for i in city_indices:\n",
-    "    city_populati(cities[i]['Population'])"
+    "    city_populations.append(cities[i]['Population'])\n",
+    "p"
    ]
   },
   {
