Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -427,7 +427,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "\n"
+    "\n",
+    "for i in city_indices: "
    ]
   },
   {
