Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -428,7 +428,8 @@
    "source": [
     "city_areas = []\n",
     "\n",
-    "for i in city_indices: "
+    "for i in city_indices: \n",
+    "    print(cities)"
    ]
   },
   {
