Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,15 +422,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-60-cb76d51ed0d9>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-60-cb76d51ed0d9>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(cities[1]]['Area'])\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4758\n",
+      "2731\n",
+      "3194\n",
+      "200\n",
+      "491\n",
+      "3750\n",
+      "68\n",
+      "8300\n",
+      "33\n",
+      "27\n",
+      "59\n",
+      "672\n"
      ]
     }
    ],
@@ -438,7 +448,7 @@
     "city_areas = []\n",
     "\n",
     "for i in city_indices: \n",
-    "    print(cities[1]]['Area'])"
+    "    ac(cities[i]['Area'])"
    ]
   },
   {
