Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,33 +422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4758\n",
-      "2731\n",
-      "3194\n",
-      "200\n",
-      "491\n",
-      "3750\n",
-      "68\n",
-      "8300\n",
-      "33\n",
-      "27\n",
-      "59\n",
-      "672\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "city_areas = []\n",
     "\n",
     "for i in city_indices: \n",
-    "    ac(cities[i]['Area'])"
+    "    city_areas.append(cities[i]['Area'])"
    ]
   },
   {
